# voidraft

./: .gitignore  LICENSE  README.md  README_ZH.md  Taskfile.yml  binding_transport.go  binding_transport.js  go.mod  go.sum  main.go  version.txt
.cursor/rules/: thxan-2-cn.mdc
.github/workflows/: build-release.yml  codeql.yml  deploy.yml
docs/: CNAME  changelog.html  index.html
docs/css/: changelog.css  ibm-plex-mono-font.css  space-mono-font.css  styles.css
docs/js/: changelog.js  script.js
frontend/: .editorconfig  .env.development  .env.production  components.d.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/docs/.vitepress/: config.ts
frontend/docs/src/: index.md
frontend/public/: go-format.wasm  go.wasm  langdetect-worker.js
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/common/prettier/plugins/clang/src/: CMakeLists.txt  README.md  template.js
frontend/src/common/prettier/plugins/clang/src/scripts/: build.sh  gen_patch.sh
frontend/src/components/: HelloWorld.vue
frontend/src/composables/: index.ts  useConfirm.ts  (+6 more)
internal/events/: tray_events.go
internal/lib/: hotkey_windows.c  hotkey_windows.h
internal/models/: backup.go  config.go  document.go  document_content.go  extension.go  extensions.go  generate.go  key_binding.go  key_bindings.go  sync.go  sync_run_log.go  theme.go  window.go
internal/services/: backup_service.go  config_migration_service.go  config_migrator_test.go  config_notification_service.go  config_observer.go  config_service.go  currency_service.go  data_migration_service.go  database_service.go  dialog_service.go  document_diff.go  document_service.go  document_service_test.go  extension_service.go  file_service.go  hotkey_service.go  hotkey_service_darwin.go  hotkey_service_linux.go  hotkey_service_stub.go  hotkey_service_test.go  http_service.go  httpclient_service.go  httpclient_service_test.go  keybinding_service.go  media_http_service.go  media_http_service_test.go  media_reference_service.go  media_reference_service_test.go  media_sync_service.go  migration_service.go  path_manager.go  path_migration_service.go  restart_darwin.go  restart_linux.go  restart_windows.go  self_update_service.go  service_manager.go  startup_darwin.go  startup_linux.go  startup_service.go  (+14 more)
internal/syncer/: app.go  config.go  types.go
internal/systray/: systray.go
internal/version/: version.go
scripts/: version.bat  version.sh
(+847 files in other folders)
